Added some weather options

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="scenery-wrapper">
           <div class="scenery-mountains"></div>
           <div class="sky"></div>
+          <div class="cloudy-sky"></div>
           <div class="sun-moon"></div>
         </div>
         <div class="controller-box">
