Added change of temperature and temperature units

--- a/index.html
+++ b/index.html
@@ -138,10 +138,14 @@
           </div>
           <div class="thermometr">
             <h3 class="thermometr-title">Temperature</h3>
-            <p class="temperature"></p>
+            <p class="temperature" data-degrees></p>
             <div class="thermometr-btns-wrapper">
-              <button class="thermometr-btn-cel" type="button">°F</button>
-              <button class="thermometr-btn-far" type="button">°C</button>
+              <button class="thermometr-btn-far" type="button" data-f="off">
+                °F
+              </button>
+              <button class="thermometr-btn-cel" type="button" data-c="on">
+                °C
+              </button>
             </div>
           </div>
         </div>
