--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
               </ul>
             </div>
             <div class="middle-controller">
+              <ul class="loader">
+                <li class="loader-item" style="--li: 1"></li>
+                <li class="loader-item" style="--li: 2"></li>
+                <li class="loader-item" style="--li: 3"></li>
+                <li class="loader-item" style="--li: 4"></li>
+              </ul>
               <div class="circle-conroller">
                 <div class="weather-wrapper">
                   <ul class="weather-list">
