Added comet and rocket events

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="scenery-wrapper">
           <div class="scenery-mountains"></div>
           <div class="sky"></div>
+          <div class="aurora"></div>
           <div class="santa-event">
             <div class="santa-sleigh">
               <img
@@ -57,6 +58,11 @@
               />
             </div>
           </div>
+          <div class="rocket-event">
+            <img class="rocket" src="./imgs/rocket.png" alt="Rocket" />
+          </div>
+          <div class="comet-event"></div>
+          <div class="snow"></div>
           <div class="cloudy-sky"></div>
           <div class="sun"></div>
           <div class="moon"></div>
@@ -164,10 +170,10 @@
                       <button
                         class="weather-btn weather-6"
                         type="button"
-                        data-weather="rain"
+                        data-weather="aurora"
                       >
                         <svg class="weather-icon" id="weather-icon-6">
-                          <use href="./icons.svg#icon-rain"></use>
+                          <use href="./icons.svg#icon-aurora"></use>
                         </svg>
                       </button>
                     </li>
